Update template types and tokens search

--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -25,6 +25,7 @@
                         [class.error]="formInvalid && !entity.type"
                         [disabled]="mode === modes.View"
                         [options]="types"
+                        [mapper]="typeMapper"
                         [selected]="entity.type"
                         [placeholder]="'EMAILTEMPLATE_INFO_TYPE' | translate"
                         (onSelect)="entity.type = $event">
