Fix account management styles

--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.html
@@ -65,7 +65,7 @@
 
   </div>
 
-  <div *ngIf="session && authService.hasPermissions('bill', 'read')" class="row">
+  <div *ngIf="session && authService.hasPermissions('bill', 'read')" class="row row--start">
 
     <div class="card column" *ngIf="customer">
       <div class="title">Contact Information</div>
