--- a/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
+++ b/src/app/pages/account-management-page/account-management-general/account-management-general.component.scss
@@ -179,3 +179,11 @@
     }
   }
 }
+
+.cancel-button {
+  margin-left: auto;
+  margin-right: 10px;
+  background: #EF4339;
+  color: #fff;
+  border-radius: 4px;
+}
