--- a/src/app/pages/components/blue-header/blue-header.component.scss
+++ b/src/app/pages/components/blue-header/blue-header.component.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: calc(100% - 64px);
 
     .crumbs {
       display: flex;
