--- a/src/app/dialog-modals/order-filters-dialog/order-filters-dialog.component.html
+++ b/src/app/dialog-modals/order-filters-dialog/order-filters-dialog.component.html
@@ -18,7 +18,7 @@
 
       <div class="box-container">
         <div class="box-row">
-          <div class="box">
+          <div class="box box--single">
             <div class="label">Status</div>
             <mat-checkbox [(ngModel)]="allStatus" (change)="allStatusSelected($event)">All</mat-checkbox>
             <mat-checkbox [(ngModel)]="shippedStatus" (change)="singleStatusSelected($event)">Shipped</mat-checkbox>
@@ -29,6 +29,18 @@
             <mat-checkbox [(ngModel)]="chargebacksStatus" (change)="singleStatusSelected($event)">Chargebacks</mat-checkbox>
           </div>
         </div>
+      </div>
+
+      <div class="filter">
+        <div class="filter__title">Campaigns</div>
+
+        <single-filter [items]="selectedCampaigns"
+                       [options]="campaignsService.entities$ | async"
+                       [title]="'campaign'"
+                       [optionMapper]="campaignMapper"
+                       (itemAdded)="addCampaign()"
+                       (itemRemovedAtIndex)="removeCampaignAtIndex($event)">
+        </single-filter>
       </div>
 
       <div class="filter">
