--- a/src/app/pages/customer-advanced-page/customer-info/customer-info.component.html
+++ b/src/app/pages/customer-advanced-page/customer-info/customer-info.component.html
@@ -31,10 +31,7 @@
       <div class="text">{{_defaultCreditCard.name}}</div>
       <div class="text">{{_defaultCreditCard.address.line1}}</div>
       <div class="text">{{_defaultCreditCard.address.line2}}</div>
-      <div class="text">
-        {{_defaultCreditCard.address.city}}
-        <span *ngIf="_defaultCreditCard.address.city && _defaultCreditCard.address.state">,</span>
-        {{_defaultCreditCard.address.state}} {{_defaultCreditCard.address.zip}}</div>
+      <div class="text">{{_defaultCreditCard.address.city}}, {{_defaultCreditCard.address.state}} {{_defaultCreditCard.address.zip}}</div>
       <div class="text">{{_defaultCreditCard.address.country}}</div>
     </ng-container>
   </div>
