--- a/src/app/dialog-modals/shippingreceipt-filters-dialog/shippingreceipt-filters-dialog.component.html
+++ b/src/app/dialog-modals/shippingreceipt-filters-dialog/shippingreceipt-filters-dialog.component.html
@@ -9,13 +9,6 @@
 
     <div class="content">
 
-      <div class="mrw-bi-input search-input-container">
-        <mat-form-field [floatLabel]="'never'">
-          <input type="text" matInput placeholder="Search">
-        </mat-form-field>
-        <mat-icon class="topnav__search__icon">search</mat-icon>
-      </div>
-
       <div class="date">
 
         <div class="date__title">Date Range</div>
@@ -27,11 +20,11 @@
         <div class="box-row">
           <div class="box box--single">
             <div class="label">Status</div>
-            <mat-checkbox [checked]="true">All</mat-checkbox>
-            <mat-checkbox>Pending</mat-checkbox>
-            <mat-checkbox>Shipped</mat-checkbox>
-            <mat-checkbox>Delivered</mat-checkbox>
-            <mat-checkbox>Errors</mat-checkbox>
+            <mat-checkbox [(ngModel)]="allStatus" (change)="allStatusSelected($event)">All</mat-checkbox>
+            <mat-checkbox [(ngModel)]="pendingStatus" (change)="singleStatusSelected($event)">Pending</mat-checkbox>
+            <mat-checkbox [(ngModel)]="shippedStatus" (change)="singleStatusSelected($event)">Shipped</mat-checkbox>
+            <mat-checkbox [(ngModel)]="deliveredStatus" (change)="singleStatusSelected($event)">Delivered</mat-checkbox>
+            <mat-checkbox [(ngModel)]="errorStatus" (change)="singleStatusSelected($event)">Errors</mat-checkbox>
           </div>
         </div>
 
@@ -39,8 +32,6 @@
           <div class="box box--single">
             <div class="label">Fulfillment Providers</div>
             <mat-checkbox [checked]="true">All</mat-checkbox>
-            <mat-checkbox>PUSH</mat-checkbox>
-            <mat-checkbox>Provider 2</mat-checkbox>
           </div>
         </div>
       </div>
