--- a/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
+++ b/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
@@ -1,34 +1,20 @@
 <div class="entity-index">
 
-  <blue-header [items]="crumbItems" [titleValue]="'SHIPPINGRECEIPT_INDEX_TITLE'"></blue-header>
+  <blue-header [items]="crumbItems" [titleValue]="'Shipping Receipts'"></blue-header>
 
-  <entities-table-wrapper
-          [data]="entities"
-          [loaded]="initialLoaded"
-          [columnParams]="columnParams"
-          [filterString]="filterValue"
-          [serverError]="serverError"
-          (selected)="viewEntity($event.id)"
-
-          [service]="service"
-          (viewClicked)="viewEntity($event.id)"
-          (copyClicked)="copyEntity($event.id)"
-          (exportClicked)="exportEntity($event.id)"
-          (editClicked)="editEntity($event.id)"
-          (deleteClicked)="deleteEntity($event.id)"
-          (deleteManyClicked)="deleteMany($event)"
-          (refreshData)="refreshData()"
-
-          [limit]="limit"
-          [paginationValues]="paginationValues"
-          [previousDisabled]="page <= 0"
-          [nextDisabled]="!hasMorePages()"
-          (previous)="previous()"
-          (next)="next()"
-          (updateLimit)="updateLimit($event)"
-          (filterChanged)="filterValue = $event"
-          (searchChanged)="setSearchString($event)"
-  >
-  </entities-table-wrapper>
-
+  <filter-table [date]="date"
+                [columnParams]="columnParams"
+                [items]="entities"
+                [tabs]="tabs"
+                [loading]="loadingData"
+                [singleOptions]="options"
+                (updatedColumns)="updateColumns($event)"
+                (updatedTabs)="updateTabs($event)"
+                (onSort)="updateSort($event)"
+                (filtersSelected)="openFiltersDialog()"
+                (tabSelected)="selectTab($event)"
+                (dateChanged)="changeDate($event)"
+                (singleOptionSelected)="optionSelected($event)"
+                (loadMore)="loadMore()">
+  </filter-table>
 </div>
