Put transaction in context of customer, update transaction single view and error snack displaying

--- a/src/app/pages/customer-advanced-page/transaction-single-view/transaction-single-view.component.scss
+++ b/src/app/pages/customer-advanced-page/transaction-single-view/transaction-single-view.component.scss
@@ -4,6 +4,15 @@
   align-items: flex-start;
 }
 
+table-memory {
+  display: block;
+  min-width: 400px;
+}
+
+.response-text {
+  margin-top: 14px;
+}
+
 .transaction-view__content__item {
   padding: 0;
 }
