--- a/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-customer/perfect-customer.component.html
@@ -58,7 +58,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let transaction of transactions" [routerLink]="['/transactions', transaction.id]">
+              <tr *ngFor="let transaction of transactions" [routerLink]="['/customers', 'advanced']" [queryParams]="{transaction: transaction.id}">
                 <td>{{transaction.alias}}</td>
                 <td class="cell--align-right">{{transaction.amount.usd() | numberlocale}}</td>
                 <td>{{transaction.processorResponse.message}}</td>
