--- a/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
+++ b/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
@@ -74,9 +74,29 @@
     background: #ffffff;
 
     th {
+      align-items: center;
       font-size: 12px;
       color: rgba(0,0,0,0.54);
       font-weight: 500;
+
+      .head-data-wrapper {
+        display: flex;
+        align-items: center;
+        height: 18px;
+        cursor: pointer;
+
+        .arrows {
+          margin-left: 2px;
+          display: flex;
+
+          mat-icon {
+            height: 18px;
+            width: 18px;
+            font-size: 18px;
+          }
+
+        }
+      }
     }
 
     td {
