--- a/src/app/dialog-modals/view-transaction-dialog/view-transaction-dialog.component.html
+++ b/src/app/dialog-modals/view-transaction-dialog/view-transaction-dialog.component.html
@@ -26,7 +26,7 @@
 
     <div class="item">
       <div class="key">Card</div>
-      <div class="value value--capitalized">{{transaction.processorResponse.getCard().brand}}</div>
+      <div class="value value--capitalized">{{transaction.creditCard.type}} **** {{transaction.creditCard.lastFour}}</div>
     </div>
 
     <div class="item">
