--- a/src/app/pages/customer-advanced-page/order-item/order-item.component.html
+++ b/src/app/pages/customer-advanced-page/order-item/order-item.component.html
@@ -17,7 +17,7 @@
           <div *ngIf="!transaction.isError()" class="transactions-details-item">
             <div>{{transaction.chargeback ? 'Chargeback' : transaction.isRefund() ? 'Refund' : transaction.processorResponse.message}}</div>
             <div>{{transaction.createdAt | formatDateTime: 'MM/DD/YYYY h:mm A'}}</div>
-            <div>{{transaction.processorResponse.getCard().brand}} {{transaction.processorResponse.getCard().last4}}</div>
+            <div>{{transaction.creditCard.type}} {{transaction.creditCard.lastFour}}</div>
             <div>{{transaction.amount.usd()}}</div>
           </div>
         </ng-container>
