Updates on account disable info screen

--- a/src/app/billing-info/billing-info.component.scss
+++ b/src/app/billing-info/billing-info.component.scss
@@ -1,7 +1,9 @@
 .container {
   display: flex;
+  position: relative;
+  top: 80px;
   flex-direction: column;
-  margin: 80px auto auto;
+  margin: auto;
   width: 360px;
   background: #DC2547;
   border-radius: 4px;
