--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,8 @@ body {
   font-size: 14pt;
   font-weight: 400;
 
+  background: #E6EAF2;
+
   ::-webkit-scrollbar {
     width: 0.4em;
     height: 0.4em;
