Add download functionality on transactions table

--- a/src/app/pages/transactions-page/transactions-index/transactions.component.html
+++ b/src/app/pages/transactions-page/transactions-index/transactions.component.html
@@ -8,6 +8,7 @@
                 [tabs]="tabs"
                 [loading]="loadingData"
                 [singleOptions]="options"
+                (download)="download($event)"
                 (updatedColumns)="updateColumns($event)"
                 (updatedTabs)="updateTabs($event)"
                 (onSort)="updateSort($event)"
