--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -42,6 +42,21 @@
     <mat-tab>
       <product-merchant-provider-group-associations [id]="entity.id"></product-merchant-provider-group-associations>
     </mat-tab>
+
+    <mat-tab>
+
+      <table-memory
+          class="campaign-view__email-templates"
+          [data]="entity.emailTemplates"
+          [columnParams]="emailTemplateColumnParams"
+          [associateData]="emailTemplateService.entities$ | async"
+          [textOptions]="emailText"
+          [associateDataMapper]="emailTemplateMapper"
+          (associate)="associateEmailTemplate($event)"
+          (disassociate)="disassociateEmailTemplate($event)"
+          (view)="viewEmailTemplate($event)">
+      </table-memory>
+    </mat-tab>
   </mat-tab-group>
 </div>
 
