--- a/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
@@ -1,22 +1,41 @@
 <div class="entity-index">
 
-  <blue-header [items]="crumbItems" [titleValue]="'EMAILTEMPLATE_INDEX_TITLE'"></blue-header>
+  <blue-header [items]="crumbItems" [titleValue]="'Email Templates'"></blue-header>
 
-  <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
+  <button mat-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><mat-icon>add</mat-icon></button>
 
-  <mat-tab-group [(selectedIndex)]="selectedIndex">
-    <mat-tab>
-      <email-templates-custom (addSelected)="addTemplate()"></email-templates-custom>
-    </mat-tab>
+  <entities-table-wrapper
+          [data]="entities"
+          [loaded]="initialLoaded"
+          [columnParams]="columnParams"
+          [filterString]="filterValue"
+          [serverError]="serverError"
+          (selected)="viewEntity($event.id)"
 
-    <mat-tab>
-      <email-templates-shared (copySelected)="copyShared($event)"></email-templates-shared>
-    </mat-tab>
+          [service]="service"
+          [showCopy]="true"
+          (viewClicked)="viewEntity($event.id)"
+          (copyClicked)="copyTemplate($event)"
+          (exportClicked)="exportEntity($event.id)"
+          (editClicked)="editEntity($event.id)"
+          (deleteClicked)="deleteEntity($event.id)"
+          (deleteManyClicked)="deleteMany($event)"
+          (refreshData)="refreshData()"
 
-  </mat-tab-group>
+          [limit]="limit"
+          [paginationValues]="paginationValues"
+          [previousDisabled]="page <= 0"
+          [nextDisabled]="!hasMorePages()"
+          (previous)="previous()"
+          (next)="next()"
+          (updateLimit)="updateLimit($event)"
+          (filterChanged)="filterValue = $event"
+          (searchChanged)="setSearchString($event)"
+  >
+  </entities-table-wrapper>
 
 </div>
 
 <div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
-  <email-template-add-new class="modal-center" [entity]="entity" [mode]="modes.Add" (cancel)="closeAddMode()" (save)="createEntity($event)"></email-template-add-new>
+  <email-template-add-new class="modal-center" [mode]="modes.Add" [entity]="entity" (save)="createEntity($event)" (cancel)="closeAddMode()"></email-template-add-new>
 </div>
