Initial work on integration orders report table

--- a/src/app/shared/components/filter-table/filter-table.component.scss
+++ b/src/app/shared/components/filter-table/filter-table.component.scss
@@ -26,7 +26,7 @@
       display: flex;
       margin: 0 0 0 auto;
       align-items: center;
-      max-width: calc(100% - 600px);
+      max-width: calc(100% - 640px);
 
       .icon {
         display: flex;
@@ -273,6 +273,7 @@
 .datepicker__label {
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
 
 a {
