Further work on grapes integration, styles, theme, tokens...

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -28,6 +28,7 @@ $main-color-500: #2962B3;
 $main-color-600: #294A78;
 $dark-color: #333333;
 $action-color: #1EBEA5;
+$action-color-light: rgba(30, 190, 165, 0.7);
 $danger-color: #DC2547;
 // Color Classes
 
