--- a/src/app/shared/components/value-filter/value-filter.component.scss
+++ b/src/app/shared/components/value-filter/value-filter.component.scss
@@ -12,8 +12,20 @@
   }
 
   .item {
-    width: 28%;
     margin-right: 10px;
+    box-sizing: border-box;
+
+    &:nth-of-type(1) {
+      width: 150px;
+    }
+
+    &:nth-of-type(2) {
+      width: 105px;
+    }
+
+    &:nth-of-type(3) {
+      width: 150px;
+    }
   }
 
   mat-icon {
