--- a/src/assets/scss/_mat-rewrites.scss
+++ b/src/assets/scss/_mat-rewrites.scss
@@ -48,7 +48,7 @@
     }
 
     .mat-form-field-wrapper {
-      padding-bottom: 0;
+      padding-bottom: 0 !important;
     }
   }
 
@@ -82,7 +82,7 @@
     }
 
     .mat-form-field-wrapper {
-      padding-bottom: 0;
+      padding-bottom: 0 !important;
     }
   }
 
