--- a/src/assets/scss/_grapes-rewrites.scss
+++ b/src/assets/scss/_grapes-rewrites.scss
@@ -30,4 +30,8 @@ $fa-font-path: '~font-awesome/fonts' !default;
   }
 }
 
+.fa-window-maximize:before {
+  font-size: 38px;
+}
+
 @import "~grapesjs/src/styles/scss/main.scss";
