Move 'send test email' button to grapes builder

--- a/src/assets/scss/_grapes-rewrites.scss
+++ b/src/assets/scss/_grapes-rewrites.scss
@@ -34,4 +34,8 @@ $fa-font-path: '~font-awesome/fonts' !default;
   font-size: 38px;
 }
 
+.gjs-margin-left-25 {
+  margin-left: 25px;
+}
+
 @import "~grapesjs/src/styles/scss/main.scss";
