Work on custom blocks

--- a/src/assets/scss/_grapes-rewrites.scss
+++ b/src/assets/scss/_grapes-rewrites.scss
@@ -38,4 +38,7 @@ $fa-font-path: '~font-awesome/fonts' !default;
   margin-left: 25px;
 }
 
+.grapes-delete-icon {
+  float: right;
+}
 @import "~grapesjs/src/styles/scss/main.scss";
