--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -122,3 +122,26 @@ mat-tab-body {
     }
   }
 }
+
+.tab-header--email-template {
+  position: absolute;
+  z-index: 10;
+
+  .entity-view__navigation {
+    border: none;
+  }
+
+}
+
+.spe-loader--email-template {
+  .entity-view__navigation__label {
+    height: 34px;
+    line-height: 40px;
+    border: none;
+  }
+
+  .entity-view__navigation {
+    height: 40px;
+    border: none;
+  }
+}
