--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -1,22 +1,9 @@
-<div class="entity-view__card input-form" [class.entity-view__card--create]="mode === modes.Add">
-  <div class="entity-view__card__header">
-    <div *ngIf="mode !== modes.Add; else add">
-      <div class="entity-view__card__header__title">{{'EMAILTEMPLATE_INFO_TITLE' | translate}}</div>
-      <div class="entity-view__card__header__subtitle">{{'EMAILTEMPLATE_INFO_SUBTITLE' | translate}}</div>
-    </div>
-    <ng-template #add>
-      <div class="entity-view__card__header__title">{{'EMAILTEMPLATE_INFO_CREATETITLE' | translate}}</div>
-    </ng-template>
-    <ng-container *ngIf="mode !== modes.Add && editEnabled">
-      <mat-icon [matMenuTriggerFor]="editOptions">more_vert</mat-icon>
-      <mat-menu #editOptions="matMenu" x-position="before">
-        <button mat-menu-item (click)="changeMode.emit(modes.Update)">{{'EMAILTEMPLATE_INFO_EDIT' | translate}}</button>
-        <button mat-menu-item *ngIf="entity.smtpProvider && entity.smtpProvider.id" [routerLink]="['/smtpproviders', entity.smtpProvider.id]">{{'EMAILTEMPLATE_INFO_VIEWSMTPPROVIDER' | translate}}</button>
-      </mat-menu>
-    </ng-container>
+<div class="entity-view__card input-form" [class.entity-view__card--create]="mode === modes.Add" [class.entity-view__card--update]="mode === modes.Update">
+  <div class="entity-view__card__header" *ngIf="mode === modes.Add">
+    <div class="entity-view__card__header__title">{{'EMAILTEMPLATE_INFO_CREATETITLE' | translate}}</div>
   </div>
 
-  <form form #emailTemplateInput="ngForm" class="entity-view__card__content">
+  <form form #emailTemplateInput="ngForm" class="entity-view__card__content" [class.entity-view__card__content--update]="mode === modes.Update">
     <mat-form-field [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item email-template-view__input">
       <input auto-focus required matInput [disabled]="mode === modes.View" placeholder="{{'EMAILTEMPLATE_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
     </mat-form-field>
@@ -48,8 +35,8 @@
     </mat-form-field>
   </form>
 
-  <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
-    <div (click)="cancelUpdate()">{{'EMAILTEMPLATE_INFO_CANCEL' | translate}}</div>
+  <div *ngIf="mode !== modes.View" class="entity-view__card__actions" [class.entity-view__card__actions--update]="mode === modes.Update">
+    <div *ngIf="mode !== modes.Update" (click)="cancelUpdate()">{{'EMAILTEMPLATE_INFO_CANCEL' | translate}}</div>
     <div (click)="saveEmailTemplate(emailTemplateInput.form.valid)">{{'EMAILTEMPLATE_INFO_SAVE' | translate}}</div>
   </div>
 </div>
