--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
@@ -1,25 +1,14 @@
-<div *ngIf="entity; else spinner" class="entity-view">
+<div *ngIf="entity && allTokens; else spinner" class="entity-view">
 
   <blue-header [items]="breadcrumbs" [titleValue]="entityBackup.name">
     <entity-view-entityacl *ngIf="authService.isActiveAclMasterAccount()" [entityId]="entityId" [type]="'emailtemplate'"></entity-view-entityacl>
   </blue-header>
 
-  <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
+  <tab-header class="tab-header--email-template" [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)">
+    <button class="send-test-button" mat-button (click)="sendTestEmail()">SEND TEST EMAIL</button>
+  </tab-header>
 
   <mat-tab-group [(selectedIndex)]="selectedIndex">
-    <mat-tab>
-
-      <div class="email-template-view__card-container">
-        <email-template-add-new [entity]="entity"
-                                [mode]="viewMode ? modes.View : modes.Update"
-                                (cancel)="cancelEdit()"
-                                (changeMode)="setMode($event)"
-                                (save)="updateEntity($event)">
-        </email-template-add-new>
-      </div>
-
-    </mat-tab>
-
     <mat-tab>
 
       <div>
@@ -29,6 +18,8 @@
     </mat-tab>
 
     <mat-tab>
+      <div class="tab-header--placeholder"></div>
+
       <table-memory
           [data]="entity.campaigns"
           [columnParams]="campaignColumnParams"
@@ -66,7 +57,7 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [cardsExpression]="'650px'" [title]="'EMAILTEMPLATE_INDEX_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="2" [numberOfCards]="'0'" [title]="'EMAILTEMPLATE_INDEX_TITLE' | translate"></spe-loader>
 </ng-template>
 
 
