--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
@@ -15,3 +15,18 @@ entity-view-entityacl {
   border: 2px solid rgba(255,255,255,0.4);
   background: #3D6EB3;
 }
+
+.tab-header--placeholder {
+  width: 100%;
+  background: #F3F3F3;
+  height: 52px;
+}
+
+.send-test-button {
+  color: #ffffff;
+  background: #2C98F0;
+  padding: 0 12px;
+  height: 32px;
+  line-height: 32px;
+  font-size: 12px;
+}
