--- a/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
@@ -1,38 +1,54 @@
-<div class="entity-index">
+<blue-header [items]="crumbItems" [titleValue]="'Email Templates'"></blue-header>
 
-  <blue-header [items]="crumbItems" [titleValue]="'Email Templates'"></blue-header>
+<div class="body">
+  <div class="header">
+    <button mat-button class="add-new-button" *ngIf="service.hasWritePermission()" (click)="openAddMode()">NEW TEMPLATE</button>
 
-  <button mat-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><mat-icon>add</mat-icon></button>
+    <div class="mrw-bi-input">
+      <mat-form-field [floatLabel]="'never'">
+        <input matInput type="text" placeholder="Find template..." [(ngModel)]="filterString">
+      </mat-form-field>
+    </div>
 
-  <entities-table-wrapper
-          [data]="entities"
-          [loaded]="initialLoaded"
-          [columnParams]="columnParams"
-          [filterString]="filterValue"
-          [serverError]="serverError"
-          (selected)="viewEntity($event.id)"
+    <div class="count">{{entities.length}} Templates</div>
 
-          [service]="service"
-          [showCopy]="true"
-          (viewClicked)="viewEntity($event.id)"
-          (copyClicked)="copyTemplate($event)"
-          (exportClicked)="exportEntity($event.id)"
-          (editClicked)="editEntity($event.id)"
-          (deleteClicked)="deleteEntity($event.id)"
-          (deleteManyClicked)="deleteMany($event)"
-          (refreshData)="refreshData()"
+    <div class="sort" [matMenuTriggerFor]="sortoptions">
+      <div>Sort by <span>{{selectedSortBy ? ' ' + selectedSortBy.label : ''}}</span></div>
+      <mat-icon>keyboard_arrow_down</mat-icon>
+    </div>
 
-          [limit]="limit"
-          [paginationValues]="paginationValues"
-          [previousDisabled]="page <= 0"
-          [nextDisabled]="!hasMorePages()"
-          (previous)="previous()"
-          (next)="next()"
-          (updateLimit)="updateLimit($event)"
-          (filterChanged)="filterValue = $event"
-          (searchChanged)="setSearchString($event)"
-  >
-  </entities-table-wrapper>
+    <mat-menu #sortoptions="matMenu" x-position="before">
+      <button mat-menu-item *ngFor="let sort of sortBy" (click)="applySortBy(sort)">{{sort.label}}</button>
+    </mat-menu>
+  </div>
+
+  <div class="content-wrapper" *ngIf="entities">
+
+    <ng-container *ngFor="let template of entities | filterStrings: filterString: filterFunction">
+      <div class="template-card">
+        <div class="title">
+          {{template.name}}
+          <mat-icon class="menu-icon" [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
+          <mat-menu #actionsMenu="matMenu" x-position="before">
+            <button mat-menu-item [routerLink]="['/emailtemplates', template.id]">View</button>
+            <button mat-menu-item *ngIf="service.hasWritePermission()" (click)="deleteEntity(template.id)">Delete</button>
+          </mat-menu>
+        </div>
+
+        <div class="preview" [innerHtml]="template.preview | htmlSanitizer"></div>
+
+        <div class="details">
+          <div>Type: {{template.type}}</div>
+          <div class="description">Subject: {{template.subject}}</div>
+        </div>
+
+        <div class="actions">
+          <button mat-button (click)="previewTemplate(template)">PREVIEW</button>
+        </div>
+      </div>
+    </ng-container>
+
+  </div>
 
 </div>
 
