Update editor layout

--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.scss
@@ -59,7 +59,7 @@
   width: 100% !important;
   min-width: 100% !important;
   text-align: left;
-  background: #F3F3F3;
+  background: #EAF5FD;
 }
 
 .input-form {
@@ -74,6 +74,7 @@
 }
 
 .entity-view__card__content--update {
+
   padding: 10px;
 }
 
