--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -8,29 +8,34 @@
       <input auto-focus required matInput [disabled]="mode === modes.View" placeholder="{{'EMAILTEMPLATE_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
     </mat-form-field>
 
-    <dropdown-component class="email-template-view__dropdown"
-                        [class.error]="formInvalid && !entity.type"
-                        [disabled]="mode === modes.View"
-                        [options]="types"
-                        [mapper]="typeMapper"
-                        [selected]="entity.type"
-                        [placeholder]="'EMAILTEMPLATE_INFO_TYPE' | translate"
-                        (onSelect)="entity.type = $event">
-    </dropdown-component>
+    <div class="dropdown email-template-view__input" [class.error]="formInvalid && !entity.type">
+      <div class="placeholder">
+        {{entity.type ? 'Template Type *' : ''}}
+      </div>
+      <div class="content" [class.content--empty]="!entity.smtpProvider.name" [matMenuTriggerFor]="typeOptions">
+        <span>{{typeMapper(entity.type) || 'Template Type *'}}</span>
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </div>
+      <mat-menu #typeOptions="matMenu" x-position="before">
+        <button mat-menu-item *ngFor="let type of types" (click)="entity.type = type">{{typeMapper(type)}}</button>
+      </mat-menu>
+    </div>
 
-    <dropdown-component class="email-template-view__dropdown"
-                        *ngIf="smtpProviders.length"
-                        [class.error]="formInvalid && !entity.smtpProvider.id"
-                        [disabled]="mode === modes.View"
-                        [options]="smtpProviders"
-                        [mapper]="smtpProviderMapper"
-                        [selected]="entity.smtpProvider"
-                        [placeholder]="'EMAILTEMPLATE_INFO_SMTPPROVIDER' | translate"
-                        (onSelect)="entity.smtpProvider = $event">
-    </dropdown-component>
+    <div class="dropdown dropdown--last email-template-view__input" [class.error]="formInvalid && !entity.smtpProvider.name">
+      <div class="placeholder">
+        {{entity.smtpProvider.name ? 'SMTP Provider *' : ''}}
+      </div>
+      <div class="content" [class.content--empty]="!entity.smtpProvider.name" [matMenuTriggerFor]="providerOptions">
+        <span>{{entity.smtpProvider.name || 'SMTP Provider *'}}</span>
+        <mat-icon>keyboard_arrow_down</mat-icon>
+      </div>
+      <mat-menu #providerOptions="matMenu" x-position="before">
+        <button mat-menu-item *ngFor="let provider of smtpProviders" (click)="entity.smtpProvider = provider">{{provider.name}}</button>
+      </mat-menu>
+    </div>
     <div [routerLink]="['/smtpproviders']" class="text" *ngIf="!smtpProviders.length">You need to create an SMTP provider first.</div>
 
-    <mat-form-field [class.error]="formInvalid && !entity.subject" class="entity-view__card__content__item">
+    <mat-form-field [class.error]="formInvalid && !entity.subject">
       <input required matInput [disabled]="mode === modes.View" name="subject" placeholder="{{'EMAILTEMPLATE_INFO_SUBJECT' | translate}}" [(ngModel)]="entity.subject" type="text">
     </mat-form-field>
   </form>
