--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.scss
@@ -1,57 +1,9 @@
 .email-template-view {
-  &__card-container {
-    align-items: flex-start;
-
-    @media only screen and (max-width: 800px) {
-      flex-wrap: wrap;
-    }
-  }
-
-  &__dropdown {
-    max-width: 200px;
-
-    &:first-of-type {
-      margin-bottom: 10px;
-    }
-
-    &:last-of-type {
-      margin-bottom: 3px;
-    }
-  }
 
   &__input {
     max-width: 200px;
   }
 
-  &__preview {
-
-    &__body {
-      margin-bottom: 60px;
-    }
-  }
-
-  &__body {
-    min-height: 200px;
-    border: 1px solid rgba(0,0,0,0.2);
-    padding: 5px;
-    font-size: 14px;
-  }
-
-  &__label {
-    margin-bottom: 3px;
-    margin-top: 6px;
-    font-size: 12px;
-    color: rgba(0, 0, 0, 0.4);
-  }
-}
-
-.editor-container {
-  height: auto;
-
-  &--hidden {
-    overflow: hidden;
-    height: 0;
-  }
 }
 
 .entity-view__card--update {
@@ -64,6 +16,7 @@
 
 .input-form {
   width: 650px;
+  font-size: 16px;
 }
 
 .text {
@@ -74,11 +27,54 @@
 }
 
 .entity-view__card__content--update {
-
-  padding: 10px;
+  padding: 5px 10px;
 }
 
 .entity-view__card__actions--update {
-  padding: 10px 10px 15px;
+  padding: 5px 10px 10px;
 }
 
+.error {
+  .content {
+    border-color: #DC2547 !important;
+
+    span {
+      color: #DC2547 !important;
+    }
+  }
+}
+
+.dropdown {
+  &--last {
+    margin: 15px 0;
+  }
+
+  .placeholder {
+    height: 0.84375em;
+    line-height: 0.84375em;
+    color: rgba(0, 0, 0, 0.54);
+    transform: translateX(-12.5%) scale(0.75);
+    font-weight: 500;
+  }
+
+  .content {
+    display: flex;
+    align-items: center;
+    padding: 0.4375em 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+    cursor: pointer;
+
+    &--empty {
+      span {
+        color: rgba(0, 0, 0, 0.54);
+      }
+    }
+
+    mat-icon {
+      margin-left: auto;
+      height: 18px;
+      width: 18px;
+      font-size: 18px;
+    }
+  }
+}
