--- a/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
@@ -28,22 +28,20 @@
       <div class="template-card">
         <div class="title">
           {{template.name}}
-          <mat-icon class="menu-icon" [matMenuTriggerFor]="actionsMenu">more_vert</mat-icon>
-          <mat-menu #actionsMenu="matMenu" x-position="before">
-            <button mat-menu-item [routerLink]="['/emailtemplates', template.id]">View</button>
-            <button mat-menu-item *ngIf="service.hasWritePermission()" (click)="deleteEntity(template.id)">Delete</button>
-          </mat-menu>
+          <mat-icon *ngIf="service.hasWritePermission()" class="delete-icon" (click)="deleteEntity(template.id)" matTooltip="Delete Template">delete</mat-icon>
+          <mat-icon *ngIf="service.hasWritePermission()" (click)="copyEmailTemplate(template)" matTooltip="Copy Template">content_copy</mat-icon>
         </div>
 
         <div class="preview" [innerHtml]="template.preview | htmlSanitizer"></div>
 
         <div class="details">
-          <div>Type: {{template.type}}</div>
-          <div class="description">Subject: {{template.subject}}</div>
+          <div>Type: {{template.getTypeFormatted()}}</div>
+          <div>{{template.subject}}</div>
         </div>
 
         <div class="actions">
           <button mat-button (click)="previewTemplate(template)">PREVIEW</button>
+          <button mat-button [routerLink]="['/emailtemplates', template.id]">EDIT</button>
         </div>
       </div>
     </ng-container>
