--- a/src/app/pages/email-templates-page/email-templates-index/email-templates.component.scss
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates.component.scss
@@ -56,26 +56,41 @@
       width: calc(33% - 24px);
     }
 
+    @media only screen and (max-width: 900px) {
+      width: calc(50% - 24px);
+    }
+
     @media only screen and (max-width: 600px) {
-      width: calc(50%);
+      width: 100%;
     }
 
     .title {
-      position: relative;
+      display: flex;
+      align-items: center;
       background: #ffffff;
-      padding: 15px 22px;
+      padding: 10px 15px 10px 22px;
       font-size: 16px;
+      line-height: 24px;
       font-weight: 500;
 
       mat-icon {
-        position: absolute;
-        top: 15px;
-        right: 5px;
+        &:first-of-type {
+          margin-left: auto;
+        }
+
         color: rgba(0, 0, 0, 0.54);
+        height: 18px;
+        width: 18px;
+        font-size: 18px;
+        cursor: pointer;
+        color: #2C98F0;
+      }
+
+      .delete-icon {
+        margin-right: 10px;
         height: 22px;
         width: 22px;
         font-size: 22px;
-        cursor: pointer;
       }
     }
 
@@ -92,16 +107,28 @@
       padding: 15px 22px;
       font-size: 13px;
       line-height: 24px;
+
+      div {
+        &:first-of-type {
+          font-weight: 500;
+        }
+      }
     }
 
     .actions {
       display: flex;
-      padding-bottom: 15px;
+      padding: 0 10px 15px;
 
       button {
-        margin-left: auto;
-        margin-right: 10px;
         color: #2C98F0;
+        padding: 0;
+        font-size: 14px;
+        font-weight: 500;
+
+        &:first-of-type {
+          margin-left: auto;
+          margin-right: 10px;
+        }
       }
     }
   }
