--- a/src/assets/scss/_grapes-rewrites.scss
+++ b/src/assets/scss/_grapes-rewrites.scss
@@ -54,10 +54,6 @@ $fa-font-path: '~font-awesome/fonts' !default;
   font-size: 38px;
 }
 
-.gjs-margin-left-25 {
-  margin-left: 25px;
-}
-
 .grapes-delete-icon {
   float: right;
 }
@@ -107,7 +103,7 @@ $fa-font-path: '~font-awesome/fonts' !default;
 }
 
 .gjs-pn-options {
-  right: 20% !important;
+  right: calc(20% + 10px) !important;
 }
 
 .custom-grapes-block {
