--- a/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
+++ b/src/app/pages/email-templates-page/email-templates-index/email-templates.component.html
@@ -28,7 +28,7 @@
       <div class="template-card">
         <div class="title">
           {{template.name}}
-          <mat-icon *ngIf="service.hasWritePermission()" class="delete-icon" (click)="deleteEntity(template.id)" matTooltip="Delete Template">delete</mat-icon>
+          <mat-icon *ngIf="service.hasWritePermission() && !template.builtIn" class="delete-icon" (click)="deleteEntity(template.id)" matTooltip="Delete Template">delete</mat-icon>
           <mat-icon *ngIf="service.hasWritePermission()" (click)="copyEmailTemplate(template)" matTooltip="Copy Template">content_copy</mat-icon>
         </div>
 
@@ -40,6 +40,7 @@
         </div>
 
         <div class="actions">
+          <img *ngIf="!template.builtIn" src="/assets/images/logo-navigation-small.svg" alt="">
           <button mat-button (click)="previewTemplate(template)">PREVIEW</button>
           <button mat-button [routerLink]="['/emailtemplates', template.id]">EDIT</button>
         </div>
